--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -50,7 +50,10 @@ services:
 
   # The application server can also setup the database
   db_init:
-    image: data61/anonlink-app:${TAG:-latest}
+    image: 
+      data61/anonlink-app:${TAG:-latest}
+    env_file:
+      -.env
     environment:
       - DEBUG=true
       - DATABASE_PASSWORD=rX%QpV7Xgyrz
