--- a/tools/docker-compose.yml
+++ b/tools/docker-compose.yml
@@ -18,8 +18,7 @@ services:
   minio:
     image: minio/minio:RELEASE.2021-02-14T04-01-33Z
     command: server /export
-    env_file:
-      - .env
+    env_file: .env
     volumes:
       - minio:/export
     ports:
